--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "cfenv": "^1.0.x",
     "cloudant": "^1.7.x",
     "dotenv": "^4.0.0",
-    "express": "^4.15.x"
+    "express": "^4.15.x",
 	"request": "^2.83.0"
   },
   "author": "JuanRKZ",
