--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "version": "0.1.1",
   "private": false,
   "engines": {
-    "node": "6.*"
+    "node": "6.*",
+	"npm": "3.10.10"
   },
   "scripts": {
     "start": "node server.js"
